sidebar and voice

--- a/css/design.less
+++ b/css/design.less
@@ -494,6 +494,37 @@ position: absolute;
     left: 0;
 }
 
+.cx_hd_more{
+  position:relative;
+
+  margin:0;
+  padding:0 ;
+
+}
+
+.cx_hd_more ul
+{
+  display:none;
+  position:absolute;
+  top:100%;
+  right:0;
+  padding:0
+}
+
+.cx_hd_more:hover > ul
+{
+  display:block;
+}
+
+.cx_hd_more ul li
+{
+  color: #2b73b7;
+  float:none;
+  font-size: 1em !important;
+  margin-top: 0.5em;
+  display: block !important;
+  cursor: pointer;
+}
 
 // -------------<<<<<<<-----------xx my xx----------<<<<<<<<<<---------
 //-------
